--- a/scss/estilos.scss
+++ b/scss/estilos.scss
@@ -4,71 +4,31 @@
     box-sizing: border-box;
 }
 
+$color-oscuro: #31163c;
+$color-claro: #3d1e4b;
+@import './hero.scss';
+@import './footer.scss';
+@import './info.scss';
+
 html {
     scroll-behavior: smooth;
 }
 
+a {
+    text-decoration: none;
+}
+
+li {
+    list-style-type: none;
+}
+
+
 body {
-    margin: 0;
     width: 100vw;
+    overflow-x: hidden;
+
     .container-app {
-
-        .hero {
-            width: 100vw;
-            height: 100vh;
-            display: flex;
-            flex-direction: column;
-            justify-content: center;
-            align-items: center;
-            background-image: linear-gradient(to bottom, #000000c9, #00000058),
-                url("../img/pexels-johana-a-2105473018-30113681.jpg");
-            background-position: center;
-            background-repeat: no-repeat;
-            background-size: cover;
-            h1 {
-                z-index: 1;
-                color: #fff;
-                font-size: 4rem;
-                font-family: "Josefin Sans";
-            }
-        }
-
-        /* seccion footer */
-        .footer {
-            width: 100vw;
-            height: 100vh;
-            display: flex;
-            flex-direction: column;
-            justify-content: center;
-            align-items: center;
-
-            /* Dark mode colors and gradient */
-            background: #704279;
-            /* Fallback for browsers that don't support gradients */
-            background: linear-gradient(135deg,
-                    #704279 25%,
-                    #3d0088 25%,
-                    #3d0088 50%,
-                    #704279 50%,
-                    #704279 75%,
-                    #3d0088 75%,
-                    #3d0088);
-            background-size: 40px 40px;
-
-            /* Animation */
-            animation: move 5s linear infinite;
-        }
-
-        @keyframes move {
-            0% {
-                background-position: 0 0;
-            }
-
-            100% {
-                background-position: 40px 40px;
-            }
-        }
-        /* fin footer */
+        padding: 0;
     }
 
 }
