--- a/css/estilos.css
+++ b/css/estilos.css
@@ -47,16 +47,27 @@
 
 .footer {
   width: 100vw;
-  height: 100vh;
+  padding: 1rem;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  background-color: #31163c;
+}
+.footer i {
+  color: #fff;
+  display: flex;
+  align-items: center;
+  font-size: 1.5rem;
+}
+.footer i a {
+  margin: 0.5rem;
+  color: #fff;
+  font-size: 1rem;
 }
 
 .info {
   padding: 3rem;
-  height: 100vh;
   color: #fff;
   /* Dark mode colors and gradient */
   background: #3d1e4b;
@@ -68,6 +79,15 @@
 }
 .info .infoT {
   padding: 0.5rem;
+  display: flex;
+  align-items: center;
+}
+.info .infoT i {
+  font-size: 1.5rem;
+  padding: 0 0.5rem;
+}
+.info hr {
+  margin: 1rem;
 }
 .info .mapa {
   padding: 0 3rem;
@@ -77,7 +97,15 @@
   justify-content: center;
 }
 .info .mapa h4 {
-  padding: 1rem;
+  padding: 0 0 0.5rem 0;
+  display: flex;
+  align-items: center;
+}
+.info .mapa h4 i {
+  font-size: 1.5rem;
+}
+.info .mapa p {
+  padding: 0.3rem;
 }
 .info .mapa iframe {
   height: 250px;
