--- a/scss/footer.scss
+++ b/scss/footer.scss
@@ -1,8 +1,21 @@
 .footer {
     width: 100vw;
-    height: 100vh;
+    padding: 1rem;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    background-color: $color-oscuro;
+    i{
+        color: #fff;
+        display: flex;
+        align-items: center;
+        font-size: 1.5rem;
+        a{
+            margin: 0.5rem;
+            color: #fff;
+            font-size: 1rem;
+        }
+    }
+    
 }
