--- a/scss/hero.scss
+++ b/scss/hero.scss
@@ -32,6 +32,7 @@
         border: solid 1px #fff;
         background: #b52bff64;
         padding: 1rem;
+        margin-top: 0.8rem;
         .btn-confirmar{
             color: #fff;
             font-size: 24px;
