--- a/css/estilos.css
+++ b/css/estilos.css
@@ -34,16 +34,21 @@
   padding: 0.5rem;
   font-size: 24px;
 }
-.hero button {
+.hero .btn-confirmar button {
+  color: #fff;
+  font-size: 24px;
+  border: solid 1px rgba(255, 255, 255, 0);
   border-radius: 10px;
-  border: solid 1px #fff;
+  transition: all 0.5s;
   background: rgba(181, 43, 255, 0.3921568627);
   padding: 1rem;
   margin-top: 0.8rem;
+  cursor: pointer;
 }
-.hero button .btn-confirmar {
+.hero button:hover {
+  background-color: #b52bff;
+  border: solid 1px #fff;
   color: #fff;
-  font-size: 24px;
 }
 
 .footer {
