--- a/css/estilos.css
+++ b/css/estilos.css
@@ -154,21 +154,25 @@
   width: 100vw;
   padding: 1rem;
   display: flex;
-  flex-direction: column;
-  justify-content: center;
   align-items: center;
+  justify-content: center;
   background-color: #31163c;
 }
 .footer i {
   color: #fff;
   display: flex;
-  align-items: center;
   font-size: 1.5rem;
 }
 .footer i a {
   margin: 0.5rem;
   color: #fff;
   font-size: 1rem;
+}
+.footer .bx {
+  display: flex;
+}
+.footer p {
+  color: #fff;
 }
 
 html {
