--- a/scss/footer.scss
+++ b/scss/footer.scss
@@ -2,14 +2,13 @@
     width: 100vw;
     padding: 1rem;
     display: flex;
-    flex-direction: column;
-    justify-content: center;
     align-items: center;
+    justify-content: center;
+    
     background-color: $color-oscuro;
     i{
         color: #fff;
         display: flex;
-        align-items: center;
         font-size: 1.5rem;
         a{
             margin: 0.5rem;
@@ -17,5 +16,10 @@
             font-size: 1rem;
         }
     }
-    
+    .bx{
+        display: flex;
+    }
+    p{
+        color: #fff;
+    }
 }
