--- a/scss/hero.scss
+++ b/scss/hero.scss
@@ -6,8 +6,8 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    background-image: linear-gradient(to bottom, #000000c9, #00000058),
-        url("../img/pexels-johana-a-2105473018-30113681.jpg");
+    background-image: linear-gradient(to bottom, #0000009f, #00000020),
+        url("../img/fondo1.jpeg");
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
