--- a/css/estilos.css
+++ b/css/estilos.css
@@ -13,7 +13,7 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0.7882352941), rgba(0, 0, 0, 0.3450980392)), url("../img/pexels-johana-a-2105473018-30113681.jpg");
+  background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0.6235294118), rgba(0, 0, 0, 0.1254901961)), url("../img/fondo1.jpeg");
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
@@ -102,6 +102,40 @@
     background-position: 40px 40px;
   }
 }
+.regalos {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  padding: 3rem;
+  background: rgba(181, 43, 255, 0.3921568627);
+}
+.regalos .bx-tada {
+  font-size: 3.5rem;
+  padding: 1rem;
+  cursor: pointer;
+}
+.regalos .abrir {
+  transform: rotate();
+}
+.regalos .cuenta-bancaria {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  height: 0;
+  overflow: hidden;
+  opacity: 0;
+  transition: all 0.5s;
+}
+.regalos .cuenta-bancaria p {
+  text-align: center;
+}
+.regalos .activo {
+  height: auto;
+  opacity: 1;
+}
+
 #mensajes {
   padding: 3rem;
   background-color: #3d1e4b;
@@ -152,27 +186,32 @@
 
 .footer {
   width: 100vw;
-  padding: 1rem;
+  padding: 0.7rem;
   display: flex;
   align-items: center;
   justify-content: center;
   background-color: #31163c;
+  position: relative;
 }
-.footer i {
+.footer .links {
+  display: flex;
+  position: absolute;
+  left: 5.5rem;
+  top: 0.5rem;
+}
+.footer .links a {
+  margin: 0 0.3rem;
+}
+.footer .links a i {
   color: #fff;
   display: flex;
-  font-size: 1.5rem;
-}
-.footer i a {
-  margin: 0.5rem;
-  color: #fff;
-  font-size: 1rem;
-}
-.footer .bx {
-  display: flex;
+  font-size: 1.2rem;
+  padding: 0 0.3rem;
 }
 .footer p {
   color: #fff;
+  font-size: 1rem;
+  margin-left: 3rem;
 }
 
 html {
