--- a/scss/footer.scss
+++ b/scss/footer.scss
@@ -1,25 +1,33 @@
 .footer {
     width: 100vw;
-    padding: 1rem;
+    padding: .7rem;
     display: flex;
     align-items: center;
     justify-content: center;
-    
     background-color: $color-oscuro;
-    i{
-        color: #fff;
+    position: relative;
+    .links {
         display: flex;
-        font-size: 1.5rem;
-        a{
-            margin: 0.5rem;
-            color: #fff;
-            font-size: 1rem;
+        position: absolute;
+        left: 5.5rem;
+        top: .5rem;
+
+        a {
+            margin: 0 .3rem;
+            i {
+                color: #fff;
+                display: flex;
+                font-size: 1.2rem;
+                padding: 0 .3rem;
+            }
         }
+        
+
     }
-    .bx{
-        display: flex;
-    }
-    p{
+
+    p {
         color: #fff;
+        font-size: 1rem;
+        margin-left: 3rem;
     }
 }
