--- a/css/estilos.css
+++ b/css/estilos.css
@@ -13,7 +13,7 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0.6235294118), rgba(0, 0, 0, 0.1254901961)), url("../img/fondo1.jpeg");
+  background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0.6235294118), rgba(0, 0, 0, 0.1254901961)), url("../img/carlos.jpeg");
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
