--- a/scss/hero.scss
+++ b/scss/hero.scss
@@ -7,7 +7,7 @@
     justify-content: center;
     align-items: center;
     background-image: linear-gradient(to bottom, #0000009f, #00000020),
-        url("../img/fondo1.jpeg");
+        url("../img/carlos.jpeg");
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
