--- a/scss/regalos.scss
+++ b/scss/regalos.scss
@@ -22,9 +22,12 @@
         height: 0;
         overflow: hidden;
         opacity: 0;
-        transition: all .5s;
+        transition: all .1s;
         p{
             text-align: center;
+        }
+        strong{
+            color: #b52bff64;
         }       
     }
     .activo{
