cambio de fotos, edicion Sofia

--- a/scss/hero.scss
+++ b/scss/hero.scss
@@ -7,7 +7,7 @@
     justify-content: center;
     align-items: center;
     background-image: linear-gradient(to bottom, #00000044, #0000001e),
-        url("../img/fondo1.jpeg");
+        url("../img/fondo-editada-locaSofi.jpeg");
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
