--- a/scss/estilos.scss
+++ b/scss/estilos.scss
@@ -29,6 +29,7 @@ li {
 body {
     width: 100vw;
     overflow-x: hidden;
+    background: #3d1e4b;
     .container-app {
         padding: 0;
     }
