--- a/scss/regalos.scss
+++ b/scss/regalos.scss
@@ -4,7 +4,8 @@
     justify-content: center;
     align-items: center;
     padding: 3rem;
-    background: #b52bff64;
+    background: #b52bff;
+    //color: #fff;
     h2{}
     .bx-tada{
         font-size: 3.5rem;
@@ -27,7 +28,8 @@
             text-align: center;
         }
         strong{
-            color: #b52bff64;
+            color: $color-oscuro;
+            font-size: 1.2rem;
         }       
     }
     .activo{
