--- a/scss/footer.scss
+++ b/scss/footer.scss
@@ -8,7 +8,7 @@
     position: relative;
     .links {
         display: flex;
-        position: absolute;
+        //position: absolute;
         left: 5.5rem;
         top: .5rem;
 
