--- a/scss/regalos.scss
+++ b/scss/regalos.scss
@@ -4,8 +4,8 @@
     justify-content: center;
     align-items: center;
     padding: 3rem;
-    background: #b52bff;
-    //color: #fff;
+    background: #b52bff5b;
+    color: #fff;
     h2{}
     .bx-tada{
         font-size: 3.5rem;
@@ -28,7 +28,7 @@
             text-align: center;
         }
         strong{
-            color: $color-oscuro;
+            color: #e7bbff;
             font-size: 1.2rem;
         }       
     }
