--- a/scss/estilos.scss
+++ b/scss/estilos.scss
@@ -9,6 +9,7 @@ $color-oscuro: #31163c;
 $color-claro: #3d1e4b;
 @import './hero.scss';
 @import './info.scss';
+@import './carrousel.scss';
 @import './regalos.scss';
 @import './mensajes.scss';
 @import './footer.scss';
