--- a/css/estilos.css
+++ b/css/estilos.css
@@ -104,6 +104,11 @@
 }
 .carrousel {
   padding: 1rem;
+  overflow: hidden;
+}
+.carrousel .carousel-item {
+  height: 50vh;
+  object-fit: cover;
 }
 
 .regalos {
@@ -119,9 +124,10 @@
   font-size: 3.5rem;
   padding: 1rem;
   cursor: pointer;
+  transition: all 0.5s;
 }
 .regalos .abrir {
-  transform: rotate();
+  transform: rotate(-360deg);
 }
 .regalos .cuenta-bancaria {
   display: flex;
