--- a/scss/carrousel.scss
+++ b/scss/carrousel.scss
@@ -1,3 +1,8 @@
 .carrousel{
     padding: 1rem;
+    overflow: hidden;
+    .carousel-item{
+        height: 50vh;
+        object-fit: cover;
+    }
 }
