--- a/scss/carrousel.scss
+++ b/scss/carrousel.scss
@@ -1,9 +1,19 @@
-.carousel{
+.carousel {
     height: 400px;
-    .carousel-item{
+
+    .carousel-item {
         height: 400px;
         object-fit: cover;
         overflow: hidden;
         width: 100%;
+
+        img {
+            object-fit: contain;
+            width: 100%;
+            height: 400px;
+
+            display: block;
+            margin: auto;
+        }
     }
 }
